[project]
name = "nab-anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Keminarys",email = "dylan-laurens14@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "torch (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = {allow-prereleases = true}
